fixed overflow issue

--- a/src/styles/layout/_containers.scss
+++ b/src/styles/layout/_containers.scss
@@ -141,6 +141,7 @@
 
 .main-container__mobile {
   display:flex;
+  overflow:hidden;
 }
 
 .top-container {
